Init lib sensors centrally in the daemon

Initing muliple times in the same process leads to crashes.
BUG:437523