plugins/cpu/linuxcpuplugin.cpp
@@ -127,7 +127,6 @@ void LinuxCpuPluginPrivate::update()
 void LinuxCpuPluginPrivate::addSensors()
 {
 #ifdef HAVE_SENSORS
-    sensors_init(nullptr);
     int number = 0;
     while (const sensors_chip_name * const chipName = sensors_get_detected_chips(nullptr, &number)) {
         char name[100];
